<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="@dimen/sesl_color_picker_selected_color_layout_height" android:layout_marginTop="@dimen/sesl_color_picker_rgb_layout_margin" android:layout_gravity="center">
    <LinearLayout
        android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" android:layout_gravity="center" android:gravity="center" android:orientation="horizontal">
        <ImageView
            android:id="@+id/sesl_color_picker_current_color_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_toStartOf="@+id/pivot" android:background="@drawable/sesl_color_picker_selected_color_item_current_left_view" />
        <ImageView
            android:id="@+id/sesl_color_picker_picked_color_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_toEndOf="@+id/pivot" android:background="@drawable/sesl_color_picker_selected_color_item_current_right_view" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" android:gravity="center" android:orientation="vertical">
        <TextView
            android:id="@+id/sesl_color_hex_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center" android:text="@string/sesl_color_hex_text" android:textSize="@dimen/sesl_color_picker_selected_color_text_size" />
        <EditText
            android:id="@+id/sesl_color_hex_edit_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@null" android:textSize="@dimen/sesl_color_picker_edit_text_size" android:singleLine="true" android:maxLength="6" android:digits="ABCDEFabcdef0123456789" android:imeOptions="flagNoExtractUi" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" android:gravity="center" android:orientation="vertical">
        <TextView
            android:id="@+id/sesl_color_red_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center" android:text="@string/sesl_color_red_text" android:textSize="@dimen/sesl_color_picker_selected_color_text_size" />
        <EditText
            android:id="@+id/sesl_color_red_edit_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@null" android:textSize="@dimen/sesl_color_picker_edit_text_size" android:maxLength="3" android:inputType="number" android:imeOptions="flagNoExtractUi" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" android:gravity="center" android:orientation="vertical">
        <TextView
            android:id="@+id/sesl_color_green_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center" android:text="@string/sesl_color_green_text" android:textSize="@dimen/sesl_color_picker_selected_color_text_size" />
        <EditText
            android:id="@+id/sesl_color_green_edit_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@null" android:textSize="@dimen/sesl_color_picker_edit_text_size" android:maxLength="3" android:inputType="number" android:imeOptions="flagNoExtractUi" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" android:gravity="center" android:orientation="vertical">
        <TextView
            android:id="@+id/sesl_color_blue_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center" android:text="@string/sesl_color_blue_text" android:textSize="@dimen/sesl_color_picker_selected_color_text_size" />
        <EditText
            android:id="@+id/sesl_color_blue_edit_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@null" android:textSize="@dimen/sesl_color_picker_edit_text_size" android:maxLength="3" android:inputType="number" android:imeOptions="flagNoExtractUi" />
    </LinearLayout>
</LinearLayout>